--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -145,7 +145,7 @@ footer.page-footer {
   border-radius: 8px;
   text-align: center;
   padding: 5px;
-  margin: 0px;
+  margin: 0.5px;
   background-color: #284c79;
   /*color: rgb(136, 172, 217);*/
 }
@@ -172,8 +172,8 @@ footer.page-footer {
 }
 
 .card .avatar img {
-  width: 120px;
-  height: 120px;
+  width: 80px;
+  height: 80px;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   border-radius: 50%;
@@ -199,4 +199,8 @@ footer.page-footer {
 }
 #delete .btn-primary:hover{
   background-color: #d91505;
+}
+
+.mUser-3 {
+  padding: 0px !important;
 }
