--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,74 +1,75 @@
 {{!-- <div id="index-banner" class="parallax-container"> --}}
-  <div class="section no-pad-bot hero-div">
-    <div class ="container">
-      <div class="row">
-        <div class="col-sm d-flex align-items-center">
-          <div>
-            <h2>Find your pear!</h2>
-            <p>
-              Pair Programming is one of the most efficient way to learn programming! However, other than actually working in the industry, there aren't many opportunities for coders to meet and just, well, learn. Now, you can search for coders near your location, chat, and set a date to learn together.
-            </p>
-          </div>
+<div class="section no-pad-bot hero-div">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm d-flex align-items-center">
+        <div>
+          <h2>Find your pear!</h2>
+          <p>
+            Pair Programming is one of the most efficient way to learn programming! However, other than actually working in the industry, there aren't many opportunities for coders to meet and just, well, learn. Now, you can search for coders near your location,
+            chat, and set a date to learn together.
+          </p>
+        </div>
+      </div>
+      <div class="col-sm">
+        <img src="/assets/img/569.jpg" width="400px" />
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<div class="section no-pad-bot how-to-use">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm">
+        <div class="tile">
+          <img src="/assets/img/Compas.png" width="80" height="80" class="tile-image big-illustration">
+          <h3 class="tile-title">
+              Set your preferred Locations
+            </h3>
+        </div>
+      </div>
+      <div class="col-sm">
+        <div class="tile">
+          <img src="/assets/img/Chat.png" width="80" height="80" class="tile-image big-illustration">
+          <h3 class="tile-title">
+              Chat with coders in your area
+            </h3>
+        </div>
+      </div>
+      <div class="col-sm">
+        <div class="tile">
+          <img src="/assets/img/Calendar.png" width="80" height="80" class="tile-image big-illustration">
+          <h3 class="tile-title">
+              Set up day and time for a pair programming session!
+            </h3>
+        </div>
+      </div>
+    </div>
+    <a class="btn btn-block btn-lg btn-primary" href="/register">Sign up now!</a>
+  </div>
+</div>
+
+<div class="section no-pad-bot codewar-div">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm d-flex align-items-center">
+        <div class="col-sm">
+          <img src="/assets/img/codewars.png" width="400px" padding="20px" />
         </div>
         <div class="col-sm">
-          <img src="/assets/img/569.jpg" width="400px" />
+          <h2>Before signing up..</h2>
+          <p>
+            You are required to sign up under codewars so that you can find people with similar levels in our Pear Programming platform.
+          </p>
+          <a class="btn btn-primary" href="https://www.codewars.com/">Codewar</a>
         </div>
       </div>
     </div>
   </div>
+</div>
 
 
-<div class="section no-pad-bot how-to-use">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm">
-            <div class="tile">
-            <img src="/assets/img/Compas.png" width="80" height="80" class="tile-image big-illustration">
-            <h3 class="tile-title">
-              Set your preferred Locations
-            </h3>
-          </div>
-          </div>
-          <div class="col-sm">
-            <div class="tile">
-            <img src="/assets/img/Chat.png" width="80" height="80" class="tile-image big-illustration">
-            <h3 class="tile-title">
-              Chat with coders in your area
-            </h3>
-          </div>
-          </div>
-          <div class="col-sm">
-            <div class="tile">
-            <img src="/assets/img/Calendar.png" width="80" height="80" class="tile-image big-illustration">
-            <h3 class="tile-title">
-              Set up day and time for a pair programming session!
-            </h3>
-          </div>
-          </div>
-        </div>
-        <a class="btn btn-block btn-lg btn-primary" href="/register">Sign up now!</a>
-      </div>
-    </div>
-
-    <div class="section no-pad-bot codewar-div">
-      <div class ="container">
-        <div class="row">
-          <div class="col-sm d-flex align-items-center">
-            <div class="col-sm">
-              <img src="/assets/img/codewars.png" width="400px" padding="20px" />
-            </div>
-              <div class="col-sm">
-              <h2>Before signing up..</h2>
-              <p>
-                You are required to sign up under codewars so that you can find people with similar levels in our Pear Programming platform.
-              </p>
-              <a class="btn btn-primary" href="https://www.codewars.com/">Codewar</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-
-  {{!-- </div>
+{{!-- </div>
 </div> --}}
