--- a/views/pending.handlebars
+++ b/views/pending.handlebars
@@ -1,28 +1,27 @@
 <div class="icon-profile">
-<div class = "container">
-  <div class="row">
+  <div class="container">
+    <div class="row">
 
-        <div class="col-sm-3">
-            <div class="card ">
-                <canvas class="header-bg" width="250" height="70" id="header-blur"></canvas>
-                <div class="avatar">
-                    <img src="/assets/img/dayah.jpg" alt="" />
-                </div>
-                <div class="content">
-                    <p>{{user.acceptedPearing}}<br>
-                       More description here</p>
-                    <button type="button" class="btn btn-default">Pending</button>
-                    <button type="button" class="btn btn-default">Cancel</button>
-                </div>
-            </div>
+      <div class="col-sm-3">
+        <div class="card ">
+          <canvas class="header-bg" width="250" height="70" id="header-blur"></canvas>
+          <div class="avatar">
+            <img src="/assets/img/dayah.jpg" alt="" />
           </div>
-          <input id="pendingInput" type="text">
-          <h3>Search Results</h3>
-          <div class="pendingResult">
-
+          <div class="content">
+            <p>{{user.acceptedPearing}}<br> More description here</p>
+            <button type="button" class="btn btn-default">Pending</button>
+            <button type="button" class="btn btn-default">Cancel</button>
           </div>
+        </div>
+      </div>
+      <input id="pendingInput" type="text">
+      <h3>Search Results</h3>
+      <div class="pendingResult">
 
-          {{!-- <div class="col-sm-3">
+      </div>
+
+      {{!-- <div class="col-sm-3">
               <div class="card ">
                   <canvas class="header-bg" width="250" height="70" id="header-blur"></canvas>
                   <div class="avatar">
@@ -38,7 +37,7 @@
 
 
 
-    {{!-- <div class="col-3">
+      {{!-- <div class="col-3">
     <div class="card" style="margin: 20px">
       <div class="card-body">
         <h4 class="card-title">TEST 1</h4>
@@ -86,6 +85,6 @@
     </div> --}}
 
 
+    </div>
   </div>
-</div>
 </div>
