added pair model

--- a/views/chat.handlebars
+++ b/views/chat.handlebars
@@ -6,6 +6,7 @@
     <ul id="message"></ul>
     <form id="chat" action="">
       <input type="hidden" id="userName" value="{{user.username}}">
+      <input type="hidden" id="userPairId" value="{{user.pairId}}">
       <input id="m" autocomplete="off" /><button>Enter</button>
     </form>
   </p>
