--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -23,7 +23,7 @@
   </div>
   <br>
   <label for="image">Profile Photo:</label><br>
-  <input type="hidden" role="uploadcare-uploader" name="user[imageUrl]" data-images-only="true" /><br>
+  <input type="hidden" role="uploadcare-uploader" name="user[imageUrl]" data-images-only="true" data-crop /><br>
 
   <input type="hidden" name="user[about]" value="Add a short introduction of yourself here" class="black-text" />
   <input type="hidden" name="user[codewith]" value="State your available days & timings" class="black-text" />
