--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -17,6 +17,7 @@
             {{/each}}
           </div>
         </div>
+      </div>
         <div class="col-sm">
           <div class="tile">
             <h3 class="tile-title">
@@ -35,6 +36,8 @@
           <div class="tile">
             <h5>{{person.preferredLanguage}}</h5>
           </div>
+          <form action="/profile/{{ person.username }}?_method=PUT" method="post" id="updateCodewars">
+            <button class="btn btn-block btn-lg btn-primary" type="submit" name="action" value="Update">Update Kyu</button>
         </div>
       </div>
 
