--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,47 +1,49 @@
-<div class = "container">
-  <div class= "row">
-     <div class="col">
-<div class="card">
-  <h6>Current User</h6>
-  <p class="small">{{user.username}} {{user.overallKyu}} {{user.location}}</p>
-  <p class="small">{{user.overallKyu}}</p>
-  <p class="small">{{user.location}}</p>
-  <p class="small">
-    Want to see more recommended pears? Update your profile Preferred Location!
-  </p>
-</div>
-</div>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <div class="card">
+        <h6>Current User</h6>
+        <p class="small">{{user.username}} {{user.overallKyu}} {{user.location}}</p>
+        <p class="small">{{user.overallKyu}}</p>
+        <p class="small">{{user.location}}</p>
+        <p class="small">
+          Want to see more recommended pears? Update your profile Preferred Location!
+        </p>
 
-<div class="col-md-8">
+      </div>
+    </div>
+    <div class="col-md-8">
 
-<div class="card-group">
-{{#each matchedUser as |mUser|}}
-<div class="col-md-4 mUser-3" >
-  <div class="card" >
-    <div class="avatar">
-    <img class="card-img-top" src="/assets/img/dayah.jpg" alt="Card image cap">
+      <div class="card-group">
+        {{#each matchedUser as |mUser|}}
+          <div class="col-md-4 mUser-3">
+            <div class="card">
+              <div class="avatar">
+                <img class="card-img-top" src="/assets/img/dayah.jpg" alt="Card image cap">
+              </div>
+              <div class="card-body">
+                <h6 class="card-title">{{mUser.username}}</h6>
+                <p class="small card-text">Gender: {{mUser.gender}}</p>
+                <p class="small card-text">Overall Kyu: {{mUser.overallKyu}}</p>
+                <form action="/chat" method="post" id="dashboardButton">
+                  <input type="hidden" name="userOne" value="{{../user.id}}">
+                  <input type="hidden" name="userTwo" value="{{mUser.id}}">
+                  <button class="btn btn-primary" type="submit">Chat!</button>
+                </form>
+                <br>
+                <a href="/profile/{{mUser.username}}" class="btn btn-primary">See Profile</a>
+              </div>
+            </div>
+          </div>
+        {{/each}}
+      </div>
     </div>
-    <div class="card-body">
-      <h6 class="card-title">{{mUser.username}}</h6>
-      <p class="small card-text">Gender: {{mUser.gender}}</p>
-      <p class="small card-text">Overall Kyu: {{mUser.overallKyu}}</p>
-      <form action="/chat" method="post" id="dashboardButton">
-      <button class="btn btn-primary"type="submit" name="action" value="{{mUser.id}}">Chat!</button>
-    </form>
-    <br>
-      <a href="/profile/{{mUser.username}}" class="btn btn-primary">See Profile</a>
+
+
+    <div class="col">
+
     </div>
+
+
   </div>
 </div>
-{{/each}}
-</div>
-</div>
-
-
-<div class="col">
-
-  </div>
-
-
-</div>
- </div>
