codewar update and profile submit stable

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -6,6 +6,7 @@
         <div>
           <h2>Find your pear!</h2>
           <p>
+            {{ errorMsg }}
             Pair Programming is one of the most efficient way to learn programming! However, other than actually working in the industry, there aren't many opportunities for coders to meet and just, well, learn. Now, you can search for coders near your location,
             chat, and set a date to learn together.
           </p>
