--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -36,7 +36,7 @@
           <div class="tile">
             <h5>{{person.preferredLanguage}}</h5>
           </div>
-          <form action="/profile/{{ person.username }}?_method=PUT" method="post" id="updateCodewars">
+          <form action="/codewars/{{ person.id }}?_method=PUT" method="post" id="updateCodewars">
             <button class="btn btn-block btn-lg btn-primary" type="submit" name="action" value="Update">Update Kyu</button>
         </div>
       </div>
