--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -38,6 +38,7 @@
           </div>
           <form action="/codewars/{{ person.id }}?_method=PUT" method="post" id="updateCodewars">
             <button class="btn btn-block btn-lg btn-primary" type="submit" name="action" value="Update">Update Kyu</button>
+            </form>
         </div>
       </div>
 
