added resources page

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -63,7 +63,7 @@
           <p>
             You are required to sign up under codewars so that you can find people with similar levels in our Pear Programming platform.
           </p>
-          <a class="btn btn-primary" href="https://www.codewars.com/">Codewar</a>
+          <a class="btn btn-primary" href="https://www.codewars.com/">Codewars</a>
         </div>
       </div>
     </div>
