--- a/views/resources.handlebars
+++ b/views/resources.handlebars
@@ -1,1 +1,74 @@
-this is the resources page
+<div class="container">
+
+      <!-- Heading Row -->
+      <div class="row my-4">
+        <div class="col-lg-8">
+          {{!-- <img class="img-fluid rounded" src="http://placehold.it/900x400" alt=""> --}}
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/5ySLQ5_cQ34" allowfullscreen></iframe>
+          </div>
+        </div>
+        <!-- /.col-lg-8 -->
+        <div class="col-lg-4">
+          <h3>Pair Programming</h3>
+          <p>Great coders use Pair Programming but what happens when pairing isn't practical?
+          <br /> Each pair would have their own way to do pair programming. Start being an effective coder and sign up to meet more coders! </p>
+          <br />
+          <a class="btn btn-primary btn-lg" href="/register">Register Now!</a>
+        </div>
+        <!-- /.col-md-4 -->
+      </div>
+      <!-- /.row -->
+
+      <!-- Call to Action Well -->
+      <div class="card text-white bg-secondary my-4 text-center">
+        <div class="card-body">
+          <p class="text-white m-0">Build better code with friends! Register and find coders around your area!</p>
+        </div>
+      </div>
+
+      <!-- Content Row -->
+      <div class="row">
+        <div class="col-md-4 mb-4">
+          <div class="card h-100">
+            <div class="card-body">
+              <h6 class="card-title">Pair Programming - Does it really work?</h6>
+              <p class="small card-text">Pair programming consists of two programmers sharing a single workstation (one screen, keyboard and mouse among the pair). The programmer at the keyboard is usually called the "driver", the other...</p>
+            </div>
+            <div class="card-footer">
+              <a href="https://www.agilealliance.org/glossary/pairing/" class="btn btn-primary">More Info</a>
+            </div>
+          </div>
+        </div>
+        <!-- /.col-md-4 -->
+        <div class="col-md-4 mb-4">
+          <div class="card h-100">
+            <div class="card-body">
+              <h6 class="card-title">Codewars - Training Manual</h6>
+              <p class="small card-text">
+In our dojo, kata are real code challenges focused on improving skill and technique. Some train programming fundamentals, while others focus on complex problem solving. Each kata is crafted...</p>
+            </div>
+            <div class="card-footer">
+              <a href="https://www.codewars.com/about" class="btn btn-primary">More Info</a>
+            </div>
+          </div>
+        </div>
+        <!-- /.col-md-4 -->
+        <div class="col-md-4 mb-4">
+          <div class="card h-100">
+            <div class="card-body">
+              <h6 class="card-title">Pair Programming – So how good is it, really?</h6>
+              <p class="small card-text">Some developers love it and some grow horns of hate as soon as they hear the words mentioned. There are studies that show the great benefits  of higher productivity and a safer product...</p>
+            </div>
+            <div class="card-footer">
+              <a href="https://raygun.com/blog/how-good-is-pair-programming-really/" class="btn btn-primary">More Info</a>
+            </div>
+          </div>
+        </div>
+        <!-- /.col-md-4 -->
+
+      </div>
+      <!-- /.row -->
+
+    </div>
+    <!-- /.container -->
