--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -14,6 +14,8 @@
     </div>
     <div class="col-md-8">
 
+      {{#if user.location}}
+
       <div class="card-group">
         {{#each matchedUser as |mUser|}}
           <div class="col-md-4 mUser-3">
@@ -37,6 +39,13 @@
           </div>
         {{/each}}
       </div>
+
+
+    {{else}}
+
+    <h6>Please specify your preferred location at your profile to view available users in your area.</h6>
+
+    {{/if}}
     </div>
 
 
