--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -50,7 +50,7 @@
 
 
 
-  <footer class="footer-color navbar-dark fixed-bottom">
+  <footer class="footer-color navbar-dark sticky-bottom">
     <div class="container">
       <div class="row">
         <div class="col xl7 l7 s12">
