--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -21,7 +21,7 @@
           <div class="col-md-4 mUser-3">
             <div class="card">
               <div class="avatar">
-                <img class="card-img-top" src="/assets/img/dayah.jpg" alt="Card image cap">
+                <img class="card-img-top" src="{{mUser.imageUrl}}" alt="Card image cap">
               </div>
               <div class="card-body">
                 <h6 class="card-title">{{mUser.username}}</h6>
